@@ -1,6 +1,6 @@
 #!/usr/bin/env ruby
 require "rubygems"
-gem "nginxtra", "= 1.2.5.7"
+gem "nginxtra", "= 1.2.6.7"
 gem "thor", "~> 0.16.0"
 require "nginxtra"
 Nginxtra::CLI.start
